# belladonna-play

./: .gitignore  Cargo.toml  DEVLOG.md  LICENSE  NOTES.md  README.md  run_demo.sh
.github/ISSUE_TEMPLATE/: checklist-item.md
changelogs/: 1.0.1_TODO.md  1.0.2_RISK_SUMMARY.md  1.0.2_TODO.md  1.0.3_Detailed.md  1.0.3_PART_2_TODO.md  1.0.3_TODO.md  Belladonna_Play_Roadmap.md  Belladonna_Play_v1.0.1_Release.md  Belladonna_Play_v1.0.2_Release.md
docs/: HAL_CONTRACT.md  PRIVILEGE_BRIDGE_DESIGN.md  SDK_VERSIONING.md  integration-guide.md
docs/adr/: 0001-hal-fork-and-observability.md
examples/: basic_integration.rs  license_test.rs
godot-extension/: Cargo.toml  belladonna_gdext.h  lib.rs
sdk/: Cargo.toml  README.md
sdk/examples/: basic_integration.rs  interactive_demo.rs  license_test.rs
sdk/include/: belladonna_sdk.h
sdk/src/: ffi.rs  lib.rs  license_gui.rs
src/: lib.rs
