[package]
name = "belladonna-play"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "Belladonna Play fork: game-focused runtime (DRM + anti-cheat) built atop Privilege Bridge core"

[dependencies]
olivine-privilege-bridge = { path = ".." }
thiserror = "1.0"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[dev-dependencies]
