[package]
name = "belladonna-sdk"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Open-source SDK interface for Belladonna Play integration"
repository = "https://github.com/doughty247/belladonna-play"
documentation = "https://docs.rs/belladonna-sdk"

[features]
default = ["ffi"]
ffi = []
license-gui = []

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
once_cell = "1.19"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }

# Note: This is the open-source SDK interface only.
# Runtime DRM and anti-cheat functionality requires the closed-source
# belladonna-play runtime library, available separately under commercial license.